--- a/manifest.yml
+++ b/manifest.yml
@@ -6,9 +6,10 @@
 #
 # dependencies:
 #   # Pip dependencies on PyPI
-#   python:
-#     - requests
-#     - gensim
+  python:
+     - requests
+     - json
+     - dotenv
 #
 #   # Install packages with the system package manager
 #   # This searches for the provided executable and uses the package names
