--- a/settingsmeta.yaml
+++ b/settingsmeta.yaml
@@ -1,22 +1,15 @@
 
 skillMetadata:
   sections:
-    - name: Options << Name of section
-      fields:
-        - name: internal_python_variable_name
-          type: text
-          label: Setting Friendly Display Name
-          value: ""
-          placeholder: demo prompt in the input box
-    - name: Login << Name of another section
+    - name: App Info
       fields:
         - type: label
-          label: Just a little bit of extra info for the user to understand following settings
-        - name: username
+          label: Access OC Transpo data with an App ID and an API key. Please visit the OC Transpo developer website for instructions on how to obtain them.
+        - name: AppID
           type: text
-          label: Username
+          label: App ID
           value: ""
-        - name: password
-          type: password
-          label: Password
+        - name: APIKey
+          type: text
+          label: API Key
           value: ""
